# rust-projects

./: .gitignore
buy_sell_profit/: Cargo.toml
buy_sell_profit/src/: main.rs
guessing_game/src/: main.rs
hello/src/: main.rs
math/: Cargo.toml  build.rs  build.sh  uniffi.toml
math/src/: math.swift  mathFFI.h
my_android_lib/: Cargo.toml
my_android_lib/src/: lib.rs
uniffi_example/: Cargo.toml
variables/src/: main.rs
